--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;700&display=swap");
 
 @layer base {
   :root {
@@ -26,7 +26,7 @@
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -54,7 +54,7 @@
     padding: 0;
     outline: none;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
   }
   body {
     width: 100vw;
@@ -63,31 +63,33 @@
     max-height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
     color: hsl(var(--foreground));
     background-color: hsl(var(--background));
   }
-  a:disabled, button:disabled {
+  a:disabled,
+  button:disabled {
     cursor: not-allowed;
   }
-  a:enabled, button:enabled {
+  a:enabled,
+  button:enabled {
     cursor: pointer;
   }
   iframe[style*="z-index: 2147483647"] {
-  display: none;
-}
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
+    display: none;
+  }
+  /* Chrome, Safari, Edge, Opera */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
-}
+  /* Firefox */
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
 }
 
 @layer base {
@@ -98,4 +100,3 @@ input[type=number] {
     @apply bg-background text-foreground;
   }
 }
-
